ros2_ws/log/build_2024-11-19_20-14-29/robot_catch_pkg/stderr.log
  File "/home/ubuntu/TomTarget/ros2_ws/install/robot_catch_pkg/lib/python3.10/site-packages/robot_catch_pkg/robot_catch_node.py", line 127
    break
    ^^^^^
SyntaxError: 'break' outside loop

